# c_librrd

./: build.sh  dev.sh  meson.build
include/: module.c  rrd.h  ssh_module.h  ssh_module_auth_functions.h  ssh_module_base_functions.h  ssh_module_interface.h  types.h
src/: rrd.c
tests/: test1.c  test2.c  test_interface1.c
